foo/generated/httproute_treactor-api.yaml
# Generate by gcr.io/treactor/kpt-fn/create-atoms
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata: # kpt-merge: generated/treactor-api
  name: treactor-api
  namespace: generated
  annotations:
    config.kubernetes.io/managed-by: fn:gen:gcr.io/treactor/kpt-fn/create-atoms
    config.kubernetes.io/local-config: "true"
    internal.kpt.dev/upstream-identifier: 'gateway.networking.k8s.io|HTTPRoute|generated|treactor-api'
spec:
  parentRefs:
  - name: gateway
  hostnames: ["treactor.example.com"]
  rules:
  - backendRefs:
    - name: treactor-api
      port: 80
    matches:
    - path:
        value: /treact/nodes/501/info
    - path:
        value: /treact/info
